Able to get google auth working well enough to gather user info.  Need to create profile models off new users when signing in.

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 NEXT_PUBLIC_BNET_CLIENT_ID = '2d86ce13f34444569a3ec19c98e86ef4'
 NEXT_PUBLIC_BNET_SECRET = 'd7UOHU59tFhzqW9MykctpwEuAaJT6eth'
+
+NEXT_PUBLIC_FIREBASE_API_KEY = 'AIzaSyD7sMQ1ylsdG4HJwYxhhptrenqBAPeN6OM'
+NEXT_PUBLIC_FIREBASE_APP_ID = '1:541233666493:web:ee5fe3c56d65910b311ad4'
+NEXT_PUBLIC_FIREBASE_PROJECT_ID = 'gaming-profile-app'
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = 'gaming-profile-app.appspot.com'
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = '541233666493'
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN = 'gaming-profile-app.firebaseapp.com'
