--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "framer": "^2.4.1",
+    "motion": "^10.16.4",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
