--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
